# inifile

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/inifile/: file_handler.h  ini.h  strings_handler.h
src/: ini.cpp  main.cpp
